[gd_scene load_steps=11 format=3 uid="uid://dsjmmv6ryna75"]

[ext_resource type="Script" path="res://DataManager.gd" id="1_o7new"]
[ext_resource type="Script" path="res://GetDataDirectory.gd" id="2_8in6r"]
[ext_resource type="Script" path="res://MachineLoader.gd" id="3_ruxty"]

[sub_resource type="LabelSettings" id="LabelSettings_r6v4m"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6u84"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ruy7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hmyxd"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pe81"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bddu"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.1, 0.1, 0.1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_asvcl"]
font_size = 48

[node name="Window" type="CanvasLayer"]

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 1
all_tabs_in_front = true

[node name="Parts" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Machines" type="Panel" parent="TabContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Machines"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.06
offset_left = 15.0
offset_right = -15.0
text = "Machines"
label_settings = SubResource("LabelSettings_r6v4m")
vertical_alignment = 1

[node name="Label2" type="Button" parent="TabContainer/Machines"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.06
offset_right = -15.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.521569, 0.521569, 0.521569, 1)
theme_override_colors/font_hover_color = Color(0.870588, 0.619608, 0.298039, 1)
theme_override_colors/font_focus_color = Color(0.521141, 0.521141, 0.521141, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_p6u84")
text = "C:\\Users\\arche\\Documents"
flat = true
alignment = 2

[node name="Panel" type="Panel" parent="TabContainer/Machines"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 0.06
offset_left = 15.0
offset_top = -2.0
offset_right = -15.0
offset_bottom = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4ruy7")

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Machines"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Machines/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_hmyxd")
horizontal_scroll_mode = 0

[node name="GridContainer" type="HFlowContainer" parent="TabContainer/Machines/HSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="TabContainer/Machines/HSplitContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6pe81")

[node name="Panel2" type="Panel" parent="TabContainer/Machines/HSplitContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6pe81")

[node name="Panel3" type="Panel" parent="TabContainer/Machines/HSplitContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6pe81")

[node name="Panel4" type="Panel" parent="TabContainer/Machines/HSplitContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6pe81")

[node name="Panel5" type="Panel" parent="TabContainer/Machines/HSplitContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6pe81")

[node name="Panel6" type="Panel" parent="TabContainer/Machines/HSplitContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6pe81")

[node name="Panel" type="ScrollContainer" parent="TabContainer/Machines/HSplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6bddu")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Machines/HSplitContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Machines/HSplitContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Doosan XLS 500"
label_settings = SubResource("LabelSettings_asvcl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="TabContainer/Machines/HSplitContainer/Panel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="TabContainer/Machines/HSplitContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Machine Name"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Machines/HSplitContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Label2" type="Label" parent="TabContainer/Machines/HSplitContainer/Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 3
text = "Building Blah blah blah blah Building Blah blah blah blah Building Blah blah blah blah Building Blah blah blah blah"
autowrap_mode = 2

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Machines/HSplitContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Steps" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="DataManager" type="Node" parent="."]
script = ExtResource("1_o7new")

[node name="GetDataDirectory" type="FileDialog" parent="DataManager"]
title = "Select the data directory"
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
dialog_close_on_escape = false
mode_overrides_title = false
file_mode = 2
access = 2
use_native_dialog = true
script = ExtResource("2_8in6r")

[node name="MachineLoader" type="Node" parent="DataManager"]
script = ExtResource("3_ruxty")

[connection signal="button_down" from="TabContainer/Machines/Label2" to="DataManager/GetDataDirectory" method="onOpenDialog"]
[connection signal="dir_selected" from="DataManager/GetDataDirectory" to="DataManager/GetDataDirectory" method="onGetResult"]
